Integration with bank account verification frontend

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -93,6 +93,18 @@ microservice {
       host = localhost
       port = 8021
     }
+
+    bank-account-verification-api {
+      protocol = http
+      host = localhost
+      port = 9903
+    }
+
+    bank-account-verification-web {
+      protocol = http
+      host = localhost
+      port = 9903
+    }
   }
 }
 
